# android_hardware_ti_omx

./: Android.mk  CleanSpec.mk
audio/tests/: Android.mk  audioutils.c  commlistenerthrd.c  speechutils.c  tiomxplayer.c  tiomxplayer.h  tiomxplayerutils.c
core_plugin/omx_core_plugin/: Android.mk
core_plugin/omx_core_plugin/src/: ti_omx_interface.cpp
ducati/: Android.mk
ducati/domx/: Makefile.am  configure.ac
ducati/domx/mmplatform/: mmplatform.h
ducati/domx/mmplatform/src/: Android.mk  Makefile.am  ipc_setup.c  mmplatform.c
ducati/domx/system/domx/: Makefile.am  Makefile.in  omx_proxy_common.h  omx_rpc.h
ducati/domx/system/domx/memmgr_rpc/inc/: memmgr_rpc.h
ducati/domx/system/domx/memmgr_rpc/src/: Android.mk  Makefile.am  memmgr_rpc.c
ducati/domx/system/domx/omx_proxy_common/src/: Android.mk  Makefile.am  Makefile.in  README  log_func_calls.c  log_func_calls.h  omx_proxy_common.c
ducati/domx/system/domx/omx_rpc/inc/: omx_rpc_internal.h  omx_rpc_skel.h  omx_rpc_stub.h  omx_rpc_utils.h
ducati/domx/system/domx/omx_rpc/src/: Android.mk  Makefile.am  Makefile.in  omx_rpc.c  omx_rpc_config.c  omx_rpc_platform.c  omx_rpc_skel.c  omx_rpc_stub.c  omx_rpc_utils.c
ducati/domx/system/mm_osal/inc/: timm_osal_error.h  timm_osal_events.h  timm_osal_interfaces.h  timm_osal_memory.h  timm_osal_mutex.h  timm_osal_osal.h  timm_osal_pipes.h  timm_osal_semaphores.h  timm_osal_task.h  timm_osal_trace.h  timm_osal_types.h
ducati/domx/system/mm_osal/src/: Android.mk  Makefile.am  Makefile.in  timm_osal.c  timm_osal_events.c  timm_osal_memory.c  timm_osal_mutex.c  timm_osal_pipes.c  timm_osal_pipes_nw.c  timm_osal_semaphores.c  timm_osal_task.c  timm_osal_trace.c
ducati/domx/system/mmplatform/: mmplatform.h
ducati/domx/system/mmplatform/src/: Android.mk  Makefile.am  Makefile.in  ipc_setup.c  mmplatform.c
ducati/domx/system/omx_core/: Makefile.am  configure.ac
ducati/domx/system/omx_core/inc/: OMX_ComponentRegistry.h  OMX_Core.h  OMX_Debug.h  OMX_DebugMem.h  OMX_TI_Common.h  OMX_TI_Core.h  OMX_TI_IVCommon.h  OMX_TI_Image.h  OMX_TI_Index.h  OMX_TI_Video.h
ducati/domx/system/omx_core/src/: Android.mk  Makefile.am  OMX_Core.c  OMX_Core_Wrapper.c
ducati/domx/test/: README.camera  README.video
ducati/domx/test/camera/inc/: camera_test.h  dss_lib.h
ducati/domx/test/camera/src/: cam_3a_test.c  cam_fps_test.c  cam_imgcap_test.c  cam_pre_test.c  cam_vidcap_no_vnf_test.c  cam_vidcap_test.c  cam_zoom_test.c  camera_il_client.c  dss_lib.c
ducati/domx/test/daemon/: ClientDaemon.c
ducati/domx/test/h264dec/inc/: H264_Decoder_ILClient.h  ih264vdec.h
ducati/domx/test/h264dec/src/: H264_Decoder_ILClient.c  H264_Decoder_ILClient_TestCases.c
ducati/domx/test/h264enc/inc/: H264_ILClient.h
ducati/domx/test/h264enc/src/: H264_ILClient.c  H264_ILClient_AdvancedSettings.c  H264_ILClient_BasicSettings.c  H264_ILClient_DynamicSettings.c
ducati/domx/test/h264play/inc/: H264_Playback_ILClient.h  debug_utils.h  ih264vdec.h  list_utils.h  v4l2_display.h
ducati/domx/test/h264play/src/: H264_Playback_ILClient.c  H264_Playback_ILClient_TestCases.c  v4l2_display.c
ducati/domx/test/h264play2/inc/: H264_Playback_ILClient.h  debug_utils.h  ih264vdec.h  utils.h
ducati/domx/test/h264play2/src/: H264_Playback_ILClient.c  v4l2_display.c
ducati/domx/test/jpegdec/inc/: omx_jpegd.h  omx_jpegd_test.h  omx_jpegd_util.h
ducati/domx/test/jpegdec/src/: omx_jpegd.c  omx_jpegd_test_main.c  omx_jpegd_testcases.c
ducati/domx/test/mpeg4dec/inc/: MPEG4_Decoder_ILClient.h
ducati/domx/test/mpeg4dec/src/: mpeg4_decoder_ilclient.c
ducati/domx/test/mpeg4enc/inc/: MPEG4_ILClient.h
ducati/domx/test/mpeg4enc/src/: MPEG4_ILClient.c
ducati/domx/test/sample_proxy/: test_sample_proxy.c
ducati/domx/video/omx_proxy_component/inc/: PVHeader.h
ducati/domx/video/omx_proxy_component/src/: Android.mk  Config.mk  Makefile.am  Makefile.in  New Text Document.txt  android_omx_proxy_dec.c  android_omx_proxy_enc.c  omx_proxy_camera.c  omx_proxy_h264dec.c  omx_proxy_h264enc.c  omx_proxy_jpeg_dec.c  omx_proxy_mpeg4dec.c  omx_proxy_mpeg4enc.c  omx_proxy_sample.c  omx_proxy_videodec.c  omx_proxy_vp6dec.c  omx_proxy_vp7dec.c
ducati/domx/video/omx_proxy_component/src/h264_dec/: Android.mk  omx_proxy_h264dec.c
ducati/domx/video/omx_proxy_component/src/h264_enc/: Android.mk  omx_proxy_h264enc.c
ducati/system-omx/system/mm_osal/: configure.ac  libmmosal.pc.in
ducati/system-omx/system/mm_osal/inc/: timm_osal_events.h  timm_osal_interfaces.h  timm_osal_pipes.h  timm_osal_semaphores.h  timm_osal_trace.h
ducati/system-omx/system/mm_osal/src/: timm_osal_events.c  timm_osal_memory.c  timm_osal_mutex.c  timm_osal_pipes.c  timm_osal_pipes_nw.c  timm_osal_semaphores.c  timm_osal_task.c
image/src/openmax_il/jpeg_dec/: Android.mk
image/src/openmax_il/jpeg_enc/: Android.mk
system/docs/: omapssp_linux_mm_system_cm_plan.doc
system/docs/estimation/7.x/: CSSD_OMAP2430_LinuxSystem_Estimates.xls
system/docs/estimation/8.x/: CSSD_OMAP2430_LinuxSystem_Estimates.xls
system/src/openmax_il/common/: content.pkg
system/src/openmax_il/lcml/: Android.mk  content.pkg
system/src/openmax_il/omx_core/: content.pkg
system/src/openmax_il/omx_policy_manager/: Android.mk  Android.mk~
system/src/openmax_il/resource_manager_proxy/: Android.mk  Android.mk~
ti_omx_config_parser/: Android.mk
ti_omx_config_parser/inc/: ti_m4v_config_parser.h  ti_omx_config_parser.h  ti_video_config_parser.h
ti_omx_config_parser/src/: ti_m4v_config_parser.cpp  ti_omx_config_parser.cpp  ti_video_config_parser.cpp
video/src/openmax_il/prepost_processor/: Android.mk
(+288 files in other folders)
